--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "kue": "^0.11.6",
+    "mongoose": "^4.10.5",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
   }
