--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "crypto": "0.0.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
@@ -17,6 +18,7 @@
     "mongoose": "^4.10.5",
     "morgan": "~1.8.1",
     "request": "^2.81.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "sha1": "^1.1.1"
   }
 }
