--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "serve": "node ./bin/www",
+    "babel" : "babel",
+    "webpack" : "webpack"
   },
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
@@ -17,8 +23,11 @@
     "kue-ui-express": "^1.0.2",
     "mongoose": "^4.10.5",
     "morgan": "~1.8.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "webpack": "^2.6.1"
   }
 }
