--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-session": "^1.15.3",
     "kue": "^0.11.6",
     "kue-ui-express": "^1.0.2",
     "mongoose": "^4.10.5",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "request": "^2.81.0",
