--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "webpack": "webpack"
   },
   "dependencies": {
+    "aws-sdk": "^2.205.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -22,9 +23,6 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
-    "kue": "^0.11.6",
-    "kue-ui-express": "^1.0.2",
-    "mongoose": "^4.10.5",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
