--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.3",
     "morgan": "~1.8.1",
     "passport": "^0.3.2",
