--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.3",
     "morgan": "~1.8.1",
+    "mysql": "^2.15.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
