--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
     "sha1": "^1.1.1",
+    "string-format": "^0.5.0",
     "webpack": "^2.6.1",
     "webpack-html-plugin": "^0.1.1"
   },
