--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "node ./bin/www",
     "babel": "babel",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "test" : "mocha"
   },
   "dependencies": {
     "aws-sdk": "^2.205.0",
@@ -24,6 +25,7 @@
     "express": "~4.15.2",
     "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.3",
+    "mocha": "^5.0.5",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
     "passport": "^0.3.2",
