added login functionality

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "testingTrue" : "set TESTING=true",
-    "testingFalse" : "set TESTING=false",
-    "startServer" : "node ./bin/www",
-    "startTests" : "mocha --exit",
+    "testingtrue" : "set TESTING=true",
+    "testingfalse" : "set TESTING=false",
+    "startserver" : "node ./bin/www",
+    "debugserver" : "node --inspect ./bin/www",
+    "starttests" : "mocha --exit",
     "start": "set TESTING=false&& node ./bin/www",
     "babel": "babel",
     "webpack": "webpack",
@@ -29,7 +30,7 @@
     "express": "~4.15.2",
     "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.3",
-    "mocha": "^5.0.5",
+    "mocha": "^5.0.5",  
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
     "passport": "^0.3.2",
