--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "testingtrue" : "set TESTING=true",
-    "testingfalse" : "set TESTING=false",
-    "startserver" : "node ./bin/www",
-    "debugserver" : "node --inspect ./bin/www",
-    "starttests" : "mocha --exit",
+    "testingtrue": "set TESTING=true",
+    "testingfalse": "set TESTING=false",
+    "startserver": "node ./bin/www",
+    "debugserver": "node --inspect ./bin/www",
+    "nodemonstart" : "nodemon ./bin/www",
+    "starttests": "mocha --exit",
     "start": "set TESTING=false&& node ./bin/www",
     "babel": "babel",
     "webpack": "webpack",
-    "test" : "set TESTING=true&& mocha --exit"
+    "test": "set TESTING=true&& mocha --exit"
   },
   "dependencies": {
     "aws-sdk": "^2.205.0",
@@ -28,9 +29,10 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-expose": "^0.3.4",
     "express-mysql-session": "^1.2.3",
     "express-session": "^1.15.3",
-    "mocha": "^5.0.5",  
+    "mocha": "^5.0.5",
     "morgan": "~1.8.1",
     "mysql": "^2.15.0",
     "passport": "^0.3.2",
