--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-slick": "^0.23.1",
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
     "sha1": "^1.1.1",
+    "slick-carousel": "^1.8.1",
     "string-format": "^0.5.0",
     "webpack": "^2.6.1",
     "webpack-html-plugin": "^0.1.1"
