--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.1",
     "connect-mongo": "^1.3.2",
